crates/wgso/tests/cases_invalid/unknown_run_shader/.expected
error: compute shader not found
 --> ./tests/cases_invalid/unknown_run_shader/root.wgsl:1:6
  |
1 | #run unknown()
  |      ^^^^^^^
  |